changes to index

--- a/hospital website/index.html
+++ b/hospital website/index.html
@@ -104,15 +104,15 @@
 
         <div class="box">
             <i class="fas fa-eye"></i>
-            <h3>Eye care</h3>
-            <p>An eye care professional is an individual who provides a service related to the eyes or vision. It is any healthcare worker involved in eye care, from one with a small amount of post-secondary training to practitioners with a doctoral level of education.</p>
+            <h3>Home Health Nursing Services</h3>
+            <p>Registered Nurses (RNs) and Licensed Vocational Nurses (LVNs) provide essential medical care at home. They are responsible for administering medications, monitoring vital signs, managing chronic conditions, and offering education and support to patients and their families. Their expertise ensures that patients receive high-quality, compassionate care tailored to their specific needs in a familiar environment.</p>
             <a href="eye.html" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
         </div>
 
         <div class="box">
             <i class="fas fa-teeth"></i>
-            <h3>Dental Care</h3>
-            <p>Oral hygiene is the practice of keeping one's mouth clean and free of disease and other problems by regular brushing of the teeth and cleaning between the teeth. It is important that oral hygiene be carried out on a regular basis to enable prevention of dental disease and bad breath</p>
+            <h3>Home Health Physical Therapy</h3>
+            <p>Physical therapists (PTs) provide vital care in a home setting, helping patients recover and improve movement. They create personalized treatment plans to address pain, mobility issues, and functional limitations, using exercises and therapy techniques to enhance physical function and quality of life.</p>
             <a href="dental.html" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
         </div>
 
@@ -125,20 +125,15 @@
 
         <div class="box">
             <i class="fas fa-save"></i>
-            <h3>Blood Donation</h3>
-            <p>What is the 4 requirements in donating blood?
-                Weight: At least 110 lbs (50 kg). Blood volume collected will depend mainly on you body weight. Pulse rate: Between 60 and 100 beats/minute with regular rhythm. Regular blood donation is linked to lower blood pressure and a lower risk for heart attacks. t definitely helps to reduce cardiovascular risk factors</p>
+            <h3>Home Health Medical Social Services</h3>
+            <p>Medical social workers offer essential support in home health care by addressing emotional, social, and financial challenges. They help patients and families navigate healthcare systems, access resources, and cope with the impacts of illness or disability, ensuring comprehensive support for overall well-being.</p>
             <a href="blood.html" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
         </div>
 
         <div class="box">
             <i class="fas fa-water"></i>
-            <h3>Nutrition care</h3>
-            <p>Healthful eating also means replacing foods that contain trans fats, added salt, and sugar with more nutritious options.
-
-                Following a healthful diet has many health benefits, including building strong bones, protecting the heart, preventing disease, and boosting mood.
-                
-                This article looks at the top 10 benefits of a healthful diet, and the evidence behind them.</p>
+            <h3>Home Health Aide Services</h3>
+            <p>Home Health Aides (HHAs) provide personal care and assistance with daily activities in a home setting. They help with tasks such as bathing, dressing, meal preparation, and light housekeeping, offering compassionate support to ensure comfort and quality of life for patients in their own homes.</p>
             <a href="nutritionist.html" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
         </div>
 
@@ -162,8 +157,8 @@
 
         <div class="content">
             <h3>we take care of your healthy life</h3>
-            <p>The success of hospitals and healthcare providers depends on the quality of their service. But in an age where most of us look up information online before making almost any decision, a well-designed healthcare website is no less important.</p>
-            <p>Our mission is to provide you with best-practices marketing that helps you achieve your specific goals. We don’t measure our success by work that is simply cute or clever. Instead, we create and apply proven, effective and ethical marketing systems that produce quantifiable results.</p>
+            <p>Welcome to Adai Homehealth Services, where compassionate care meets professional excellence. We are a dedicated team of healthcare professionals committed to providing high-quality home health services tailored to meet the unique needs of each client.</p>
+            <p>Our mission is to be a leading provider of high-quality home health care services, dedicated to helping our patients achieve their highest potential in daily self-care activities. We are committed to delivering innovative, compassionate, and multidisciplinary care that thoroughly addresses the needs of both patients and caregivers in the communities we serve.</p>
             <a href="#services" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
         </div>
 
@@ -427,11 +422,11 @@
 
         <div class="box">
             <h3>contact info</h3>
-            <a href="#"> <i class="fas fa-phone"></i> +123-456-7890 </a>
-            <a href="#"> <i class="fas fa-phone"></i> +111-222-3333 </a>
-            <a href="#"> <i class="fas fa-envelope"></i> dummy@gmail.com </a>
-            <a href="#"> <i class="fas fa-envelope"></i> abcdef@gmail.com </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> jharkhand, india - 400104 </a>
+            <a href="#"> <i class="fas fa-phone"></i> +1 909-639-5100 </a>
+            <a href="#"> <i class="fas fa-phone"></i> +1 310-770-5451 </a>
+            <a href="#"> <i class="fas fa-fax"></i> +1 909-264-1862 </a>
+            <a href="#"> <i class="fas fa-envelope"></i> Michokanbee1@att.net </a>
+            <a href="#"> <i class="fas fa-map-marker-alt"></i> 1003 E. Cooley Dr., Suite 104, Colton, CA 92324 </a>
         </div>
 
         <div class="box">
