This is a more complete version of the web site

--- a/hospital website/blood.html
+++ b/hospital website/blood.html
@@ -47,18 +47,18 @@
             </div>
     
             <div class="content">
-                <h3>Blood Donation</h3>
-                <p>What is the 4 requirements in donating blood?
-                    Weight: At least 110 lbs (50 kg). Blood volume collected will depend mainly on you body weight. Pulse rate: Between 60 and 100 beats/minute with regular rhythm. Blood pressure: Between 90 and 160 systolic and 60 and 100 diastolic.</p>
-                <h2>Blood Diesease</h2>    
-                <p>Blood disorders occur when a part of your blood doesn’t do its job. You may have excessive bleeding, difficulty clotting or just not feel like yourself. With most blood disorders, people can expect to have a lifespan and lifestyle that’s relatively normal. Early detection and treatment can make a big difference in your quality of life.</p>
-                <p>Anemia.
-                    Hemophilia.
-                    Leukocytosis.
-                    Polycythemia vera.
-                    Sickle cell disease.
-                    Thalassemia.
-                    Von Willebrand disease.</p>
+                <h3>Medical Social Services at Home</h3>
+                <p>Medical social workers provide essential support to patients and families, addressing emotional, social, and financial challenges that arise during illness or recovery. Our goal is to ensure patients receive comprehensive care that meets all aspects of their well-being.</p>
+
+                <h1>What Our Medical Social Services Include</h1>
+                <p><strong>Emotional Support:</strong> We help patients and their families cope with the emotional impacts of illness, offering counseling and guidance to manage stress, anxiety, and other challenges.</p>
+                <p><strong>Resource Connection:</strong> Our social workers assist in accessing community resources, such as financial aid, support groups, transportation, and home care services, ensuring patients receive the help they need.</p>
+                <p><strong>Healthcare Navigation:</strong> We guide families through the complexities of healthcare systems, helping with care coordination, advance care planning, and understanding treatment options.</p>
+                <p><strong>Crisis Intervention:</strong> In difficult times, our social workers step in to provide immediate assistance, connecting families with critical services and support networks.</p>
+
+                <p>Medical social services ensure patients and families feel supported, informed, and empowered, creating a foundation for improved health and quality of life in the home setting.</p>
+
+
                 <a href="index.html" class="btn"> Go to Home Page <span class="fas fa-chevron-right"></span> </a>
             </div>
     
