--- a/hospital website/dental.html
+++ b/hospital website/dental.html
@@ -47,19 +47,17 @@
             </div>
     
             <div class="content">
-                <h3>Dental care</h3> 
-                <p>Tooth decay and gum disease are caused by plaque, a sticky combination of bacteria and food. Plaque begins to build up on teeth within a few minutes after eating. If teeth are not cleaned well each day, plaque will lead to tooth decay or gum disease. If you do not remove plaque, it turns into a hard deposit called tartar that becomes trapped at the base of the tooth. Plaque and tartar irritate and inflame the gums. Bacteria and the toxins they produce cause the gums to become:<br>
-                        Infected<br>
-                        Swollen<br>
-                        Tender
-                </p>
-                <h1>Problems</h1>
-                <p>Cavities are holes that damage the structure of teeth.<br>
-                    Gingivitis is swollen, inflamed, and bleeding gums,<br>
-                    Periodontitis is the destruction of the ligaments and bone that support the teeth, often leading to tooth loss.
-                    Bad breath (halitosis).<br>
-                    Abscesses, pain, inability to use your teeth.<br>
-                    Other health problems outside the mouth, ranging from preterm labor to heart disease.</p>
+                <h3>Therapy Services at Home</h3>
+                <p>Our skilled therapists provide physical, occupational, and speech therapy at home, helping restore mobility, independence, and communication. Here’s what each service offers:</p>
+
+                <h1>What Our Therapy Services Include</h1>
+                <p><strong>Physical Therapy (PT):</strong> Physical therapists focus on restoring movement, strength, and balance. They design personalized exercise plans to manage pain, recover from injuries, and improve mobility, ensuring you achieve the best possible physical function.</p>
+                <p><strong>Occupational Therapy (OT):</strong> Occupational therapists help patients regain the ability to perform daily activities like dressing, bathing, or cooking. They provide adaptive strategies and tools to make life easier and enhance independence in your daily routines.</p>
+                <p><strong>Speech Therapy (ST):</strong> Speech therapists address communication and swallowing difficulties. They help patients improve speech, language, and cognitive skills while offering techniques to manage swallowing issues for better health and quality of life.</p>
+
+                <p>Our therapy services are tailored to each patient’s needs, promoting recovery, independence, and overall well-being in a supportive, familiar home environment.</p>
+
+
                 <a href="index.html" class="btn"> Go to Home Page <span class="fas fa-chevron-right"></span> </a>
             </div>
     
