--- a/hospital website/index.html
+++ b/hospital website/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Medicare </title>
+    <title>Adai Homehealth Services</title>
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -19,7 +19,7 @@
 
 <header class="header">
 
-    <a href="#" class="logo"> <i class="fas fa-heartbeat"></i> Medicare. </a>
+    <a href="#" class="logo"> <i class="fas fa-heartbeat"></i>Adai Homehealth</a>
 
     <nav class="navbar">
         <a href="#home">home</a>
@@ -96,44 +96,36 @@
     <div class="box-container">
 
         <div class="box">
-            <i class="fas fa-heartbeat"></i>
-            <h3>Heart Care</h3>
-            <p>The term “heart disease” refers to several types of heart conditions that occurs in humnam being. The most common type of heart disease in the United States is coronary artery disease (CAD), which affects the blood flow to the heart. Decreased blood flow can cause a heart attack. </p>
-            <a href="heart.html" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
-        </div>
-
-        <div class="box">
             <i class="fas fa-eye"></i>
-            <h3>Home Health Nursing Services</h3>
-            <p>Registered Nurses (RNs) and Licensed Vocational Nurses (LVNs) provide essential medical care at home. They are responsible for administering medications, monitoring vital signs, managing chronic conditions, and offering education and support to patients and their families. Their expertise ensures that patients receive high-quality, compassionate care tailored to their specific needs in a familiar environment.</p>
+            <h3>Skilled Nursing</h3>
+            <p>RNs and LVNs provide vital care at home, from giving medications and monitoring health to managing conditions
+                and guiding patients and their families. Our compassionate support ensures patients feel cared for and safe
+                 in a familiar setting.</p>
             <a href="eye.html" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
         </div>
 
         <div class="box">
             <i class="fas fa-teeth"></i>
-            <h3>Home Health Physical Therapy</h3>
-            <p>Physical therapists (PTs) provide vital care in a home setting, helping patients recover and improve movement. They create personalized treatment plans to address pain, mobility issues, and functional limitations, using exercises and therapy techniques to enhance physical function and quality of life.</p>
+            <h3>Physical Therapy</h3>
+            <p>Our physical therapists provide essential home care, helping patients regain movement and manage pain. Through
+                personalized treatment plans, we use exercises and techniques to improve mobility and enhance quality of life.</p>
             <a href="dental.html" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
         </div>
 
-        <div class="box">
-            <i class="fas fa-pills"></i>
-            <h3>Meditation and Yoga</h3>
-            <p>Yoga and meditation have both become increasingly popular in the Western world, and practitioners praise their psychological and physical benefits. Current research also suggests that meditating and doing yoga can boost overall well-being and resilience to stress factors. Essentially, meditation is a part of yoga, which is performed after Yoga asana practice.</p>
-            <a href="soul.html" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
-        </div>
 
         <div class="box">
             <i class="fas fa-save"></i>
-            <h3>Home Health Medical Social Services</h3>
-            <p>Medical social workers offer essential support in home health care by addressing emotional, social, and financial challenges. They help patients and families navigate healthcare systems, access resources, and cope with the impacts of illness or disability, ensuring comprehensive support for overall well-being.</p>
+            <h3>Medical Social Services</h3>
+            <p>Our medical social workers play a key role in home health care, helping patients and families navigate emotional,
+                social, and financial challenges. They connect them with resources, guide them through healthcare systems,
+                and support overall well-being.</p>
             <a href="blood.html" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
         </div>
 
         <div class="box">
             <i class="fas fa-water"></i>
-            <h3>Home Health Aide Services</h3>
-            <p>Home Health Aides (HHAs) provide personal care and assistance with daily activities in a home setting. They help with tasks such as bathing, dressing, meal preparation, and light housekeeping, offering compassionate support to ensure comfort and quality of life for patients in their own homes.</p>
+            <h3>Home Health Aides</h3>
+            <p>Our Home Health Aides (HHAs) assist with personal care and daily tasks like bathing, dressing, meal prep, and light housekeeping. We provide compassionate support, ensuring comfort and a high quality of life for patients at home.</p>
             <a href="nutritionist.html" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
         </div>
 
@@ -169,7 +161,7 @@
 <!-- about section ends -->
 
 <!-- doctors section starts  -->
-
+<!-- Section commented til we get doctors
 <section class="doctors" id="doctors">
 
     <h1 class="heading"> our <span>doctors</span> </h1>
@@ -251,7 +243,7 @@
     </div>
 
 </section>
-
+End of comment-->
 <!-- doctors section ends -->
 
 <!-- booking section starts   -->
@@ -411,22 +403,21 @@
 
         <div class="box">
             <h3>our services</h3>
-            <a href="#services"> <i class="fas fa-chevron-right"></i> HeartCare  </a>
-            <a href="#services"> <i class="fas fa-chevron-right"></i> EyeCare </a>
-            <a href="#services"> <i class="fas fa-chevron-right"></i> DentalCare </a>
-            <a href="#services"> <i class="fas fa-chevron-right"></i> SoulCare </a>
-            <a href="#services"> <i class="fas fa-chevron-right"></i> Blood Donation </a>
-            <a href="#services"> <i class="fas fa-chevron-right"></i> NutritionCare </a>
+            <a href="#services"> <i class="fas fa-chevron-right"></i> Skilled Nursing  </a>
+            <a href="#services"> <i class="fas fa-chevron-right"></i> Therapy </a>
+            <a href="#services"> <i class="fas fa-chevron-right"></i> Medical Social Services </a>
+            <a href="#services"> <i class="fas fa-chevron-right"></i> Home Health Aides </a>
+
 
         </div>
 
         <div class="box">
             <h3>contact info</h3>
-            <a href="#"> <i class="fas fa-phone"></i> +1 909-639-5100 </a>
-            <a href="#"> <i class="fas fa-phone"></i> +1 310-770-5451 </a>
-            <a href="#"> <i class="fas fa-fax"></i> +1 909-264-1862 </a>
-            <a href="#"> <i class="fas fa-envelope"></i> Michokanbee1@att.net </a>
-            <a href="#"> <i class="fas fa-map-marker-alt"></i> 1003 E. Cooley Dr., Suite 104, Colton, CA 92324 </a>
+            <a href="tel:+9096395100"> <i class="fas fa-phone"></i> +1 909-639-5100 </a>
+            <a href="tel:+3107705451"> <i class="fas fa-phone"></i> +1 310-770-5451 </a>
+            <a href="fax:+9092641869"> <i class="fas fa-fax"></i> +1 909-264-1862 </a>
+            <a href="mailto:Michokanbee1@att.net"> <i class="fas fa-envelope"></i> Michokanbee1@att.net </a>
+            <a href="https://maps.app.goo.gl/cSHN1sZkyoJyVTUC6"> <i class="fas fa-map-marker-alt"></i> 1003 E. Cooley Dr., Suite 104, Colton, CA 92324  </a>
         </div>
 
         <div class="box">
