--- a/hospital website/index.html
+++ b/hospital website/index.html
@@ -23,8 +23,8 @@
 
     <nav class="navbar">
         <a href="#home">home</a>
-        <a href="#services">services</a>
         <a href="#about">about</a>
+        <a href="#services">services</a>
         <a href="#how-it-works">care process</a>
         <a href="#book">book</a>
 
@@ -55,7 +55,7 @@
     <div class="content">
         <h3>stay safe, stay healthy</h3>
         <p>“The art of medicine consists of amusing the patient while nature cures the disease.”</p>
-        <a href="https://forms.gle/TFYNGyF3aRNpZRBZA" class="btn"> contact us <span class="fas fa-chevron-right"></span> </a>
+        <a href="#footer" class="btn"> contact us <span class="fas fa-chevron-right"></span> </a>
     </div>
 
 </section>
@@ -345,7 +345,7 @@ End of comment-->
             </select>
             <!-- Address field (hidden by default) -->
             <div id="addressField" style="display:none;">
-                <input type="text" name="address" placeholder="Enter Address" class="box" id="address" required/>
+                <input type="text" name="address" placeholder="Enter Address" class="box" id="address"/>
             </div>
             <textarea name="message" placeholder="Additional Notes" class="box" id="messagey"></textarea>
             <button type="submit" class="btn">Book Now</button>
@@ -564,7 +564,7 @@ End of comment-->
 
 <!-- footer section starts  -->
 
-<section class="footer">
+<section class="footer" id="footer">
 
     <div class="box-container">
 
@@ -576,6 +576,7 @@ End of comment-->
             <a href="#how-it-works"> <i class="fas fa-chevron-right"></i> care process </a>
             <a href="#book"> <i class="fas fa-chevron-right"></i> book </a>
             <a href="#testimonials"> <i class="fas fa-chevron-right"></i> review </a>
+            <a href="#resources"> <i class="fas fa-chevron-right"></i> resources </a>
             <a href="#faq"> <i class="fas fa-chevron-right"></i> FAQ </a>
         </div>
 
@@ -597,7 +598,7 @@ End of comment-->
             <a href="mailto:Michokanbee1@att.net"> <i class="fas fa-envelope"></i> Michokanbee1@att.net </a>
             <a href="https://maps.app.goo.gl/cSHN1sZkyoJyVTUC6" target="_blank"> <i class="fas fa-map-marker-alt"></i> 1003 E. Cooley Dr., Suite 104, Colton, CA 92324  </a>
         </div>
-
+<!--
         <div class="box">
             <h3>follow us</h3>
             <a href="#"> <i class="fab fa-facebook-f"></i> facebook </a>
@@ -606,10 +607,10 @@ End of comment-->
             <a href="#"> <i class="fab fa-linkedin"></i> linkedin </a>
             <a href="#"> <i class="fab fa-pinterest"></i> pinterest </a>
         </div>
-
+-->
     </div>
 
-    <div class="credit"> created by <span>Team</span> | all rights reserved </div>
+    <div class="credit"> created by <span>Adai Homehealth Services</span> | all rights reserved </div>
 
 </section>
 
