--- a/hospital website/index.html
+++ b/hospital website/index.html
@@ -158,6 +158,7 @@
 
         <div class="box">
             <i class="fas fa-hand-holding-medical"></i>
+            <h3>Home Health Aides</h3>
             <p>Our Home Health Aides (HHAs) assist with personal care and daily tasks like bathing, dressing, meal prep, and light housekeeping. We provide compassionate support, ensuring comfort and a high quality of life for patients at home.</p>
             <a href="nutritionist.html" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
         </div>
@@ -310,26 +311,8 @@ End of comment-->
             <input type="number" name="number" placeholder="Phone Number" class="box" id="numy" required>
             <input type="email" name="email" placeholder="Email" class="box" id="emaily" required>
             <input type="date" name="appointmentDate" class="box" id="datey" required>
-            <select name="appointmentTime" class="box" id="timey" required>
-                <option value="">Select Time</option>
-                <option value="09:00">09:00 AM</option>
-                <option value="09:30">09:30 AM</option>
-                <option value="10:00">10:00 AM</option>
-                <option value="10:30">10:30 AM</option>
-                <option value="11:00">11:00 AM</option>
-                <option value="11:30">11:30 AM</option>
-                <option value="12:00">12:00 PM</option>
-                <option value="12:30">12:30 PM</option>
-                <option value="01:00">01:00 PM</option>
-                <option value="01:30">01:30 PM</option>
-                <option value="02:00">02:00 PM</option>
-                <option value="02:30">02:30 PM</option>
-                <option value="03:00">03:00 PM</option>
-                <option value="03:30">03:30 PM</option>
-                <option value="04:00">04:00 PM</option>
-                <option value="04:30">04:30 PM</option>
-                <option value="05:00">05:00 PM</option>
-            </select>
+            <input type="time" name="appointmentTime" placeholder="Select Time" class="box" id="timey" required>
+
             <select name="appointmentType" class="box" id="apptType" required>
                 <option value="">Select Service</option>
                 <option value="Consultation">Consultation</option>
@@ -344,9 +327,19 @@ End of comment-->
                 <option value="Phone Call">Phone Call</option>
             </select>
             <!-- Address field (hidden by default) -->
-            <div id="addressField" style="display:none;">
-                <input type="text" name="address" placeholder="Enter Address" class="box" id="address"/>
+            <div id="addressField">
+                <input
+                        type="text"
+                        name="address"
+                        placeholder="Enter Address"
+                        class="box"
+                        id="address"
+                        oninput="fetchAddressSuggestions(this.value)" />
+                <ul id="suggestions" style="list-style: none; padding: 0; margin: 0; border: 1px solid #ccc; display: none; max-height: 200px; overflow-y: auto; background: #fff;"></ul>
             </div>
+
+
+
             <textarea name="message" placeholder="Additional Notes" class="box" id="messagey"></textarea>
             <button type="submit" class="btn">Book Now</button>
         </form>
@@ -592,22 +585,27 @@ End of comment-->
 
         <div class="box">
             <h3>contact info</h3>
-            <a href="tel:+9096395100"> <i class="fas fa-phone"></i> +1 909-639-5100 </a>
-            <a href="tel:+3107705451"> <i class="fas fa-phone"></i> +1 310-770-5451 </a>
-            <a href="fax:+9092641869"> <i class="fas fa-fax"></i> +1 909-264-1862 </a>
+            <a href="tel:+19096395100"> <i class="fas fa-phone"></i> +1 909-639-5100 </a>
+            <a href="tel:+13107705451"> <i class="fas fa-phone"></i> +1 310-770-5451 </a>
+            <a href="tel:+19092641869"> <i class="fas fa-fax"></i> +1 909-264-1862 </a>
             <a href="mailto:Michokanbee1@att.net"> <i class="fas fa-envelope"></i> Michokanbee1@att.net </a>
             <a href="https://maps.app.goo.gl/cSHN1sZkyoJyVTUC6" target="_blank"> <i class="fas fa-map-marker-alt"></i> 1003 E. Cooley Dr., Suite 104, Colton, CA 92324  </a>
         </div>
-<!--
+
         <div class="box">
-            <h3>follow us</h3>
-            <a href="#"> <i class="fab fa-facebook-f"></i> facebook </a>
-            <a href="#"> <i class="fab fa-twitter"></i> twitter </a>
-            <a href="#"> <i class="fab fa-instagram"></i> instagram </a>
-            <a href="#"> <i class="fab fa-linkedin"></i> linkedin </a>
-            <a href="#"> <i class="fab fa-pinterest"></i> pinterest </a>
+            <h3>Our Working Hours</h3>
+            <a href="#footer"> <i class="fas fa-calendar-day"></i> Monday: 9 AM - 5 PM </a>
+            <a href="#footer"> <i class="fas fa-calendar-day"></i> Tuesday: 9 AM - 5 PM </a>
+            <a href="#footer"> <i class="fas fa-calendar-day"></i> Wednesday: 9 AM - 5 PM </a>
+            <a href="#footer"> <i class="fas fa-calendar-day"></i> Thursday: 9 AM - 5 PM </a>
+            <a href="#footer"> <i class="fas fa-calendar-day"></i> Friday: 9 AM - 5 PM </a>
+            <a href="#footer" style="color: red;"> <i class="fas fa-calendar-week"></i> Saturday: Closed </a>
+            <a href="#footer" style="color: red;"> <i class="fas fa-calendar-week"></i> Sunday: Closed </a>
         </div>
--->
+
+
+
+
     </div>
 
     <div class="credit"> created by <span>Adai Homehealth Services</span> | all rights reserved </div>
@@ -630,6 +628,85 @@ End of comment-->
             addressField.style.display = "none";
         }
     }
+
+    const inputTime = document.getElementById('timey');
+
+    // Set the minimum and maximum time for the time picker
+    inputTime.min = '09:00';
+    inputTime.max = '17:00';
+
+    // Set step to 1800 seconds (30 minutes)
+    inputTime.step = 1800;
+
+    // Event listener to round the selected time to the nearest 30 minutes
+    inputTime.addEventListener('input', function () {
+        let time = inputTime.value.split(':');
+        let hours = parseInt(time[0]);
+        let minutes = parseInt(time[1]);
+
+        // Round to the nearest 30 minutes
+        if (minutes < 15) {
+            minutes = 0;
+        } else if (minutes < 45) {
+            minutes = 30;
+        } else {
+            minutes = 0;
+            hours = (hours + 1) % 24; // Round to next hour if minutes >= 45
+        }
+
+        // Format the time to HH:MM
+        inputTime.value = `${String(hours).padStart(2, '0')}:${String(minutes).padStart(2, '0')}`;
+    });
+
+
+
+    async function fetchAddressSuggestions(query) {
+        const suggestionsList = document.getElementById('suggestions');
+        suggestionsList.innerHTML = ''; // Clear previous suggestions
+
+        if (query.length < 3) {
+            suggestionsList.style.display = 'none';
+            return;
+        }
+
+        try {
+            // Define Southern California bounding box (approximate)
+            const southCaliforniaViewbox = '-121.0,32.5,-114.0,36.5'; // [minLon, minLat, maxLon, maxLat]
+
+            // Fetch suggestions from Nominatim
+            const response = await fetch(
+                `https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(query)}&viewbox=${southCaliforniaViewbox}&bounded=1`
+            );
+            const data = await response.json();
+
+            if (data.length > 0) {
+                suggestionsList.style.display = 'block';
+                data.forEach((item) => {
+                    const li = document.createElement('li');
+                    li.textContent = item.display_name;
+                    li.style.cursor = 'pointer';
+                    li.style.padding = '5px';
+                    li.style.borderBottom = '1px solid #ccc';
+                    li.onclick = () => selectAddress(item.display_name);
+                    suggestionsList.appendChild(li);
+                });
+            } else {
+                suggestionsList.style.display = 'none';
+            }
+        } catch (error) {
+            console.error('Error fetching address suggestions:', error);
+        }
+    }
+
+    function selectAddress(address) {
+        document.getElementById('address').value = address;
+        document.getElementById('suggestions').style.display = 'none';
+    }
+
+
+
+
+
     // import { initializeApp } from "https://www.gstatic.com/firebasejs/9.9.0/firebase-app.js";
 
     const firebaseConfig = {
