--- a/hospital website/blood.html
+++ b/hospital website/blood.html
@@ -59,7 +59,7 @@
                 <p>Medical social services ensure patients and families feel supported, informed, and empowered, creating a foundation for improved health and quality of life in the home setting.</p>
 
 
-                <a href="index.html" class="btn"> Go to Home Page <span class="fas fa-chevron-right"></span> </a>
+                <a href="../index.html" class="btn"> Go to Home Page <span class="fas fa-chevron-right"></span> </a>
             </div>
     
         </div>
