--- a/hospital website/dental.html
+++ b/hospital website/dental.html
@@ -58,7 +58,7 @@
                 <p>Our therapy services are tailored to each patient’s needs, promoting recovery, independence, and overall well-being in a supportive, familiar home environment.</p>
 
 
-                <a href="index.html" class="btn"> Go to Home Page <span class="fas fa-chevron-right"></span> </a>
+                <a href="../index.html" class="btn"> Go to Home Page <span class="fas fa-chevron-right"></span> </a>
             </div>
     
         </div>
