--- a/hospital website/nutritionist.html
+++ b/hospital website/nutritionist.html
@@ -59,7 +59,7 @@
                 <p>Our Home Health Aides are dedicated to improving the quality of life for patients by providing compassionate, reliable care that promotes independence and comfort at home.</p>
 
 
-                <a href="index.html" class="btn"> Go to Home Page <span class="fas fa-chevron-right"></span> </a>
+                <a href="../index.html" class="btn"> Go to Home Page <span class="fas fa-chevron-right"></span> </a>
             </div>
     
         </div>
