--- a/hospital website/soul.html
+++ b/hospital website/soul.html
@@ -62,7 +62,7 @@
 
                     They highlight that their results may point to an enhanced functioning of certain elements of the central nervous system, a healthier immune system, and a strengthened sense of focus and awareness.</p>
                 
-                <a href="index.html" class="btn"> Go to Home Page <span class="fas fa-chevron-right"></span> </a>
+                <a href="../index.html" class="btn"> Go to Home Page <span class="fas fa-chevron-right"></span> </a>
             </div>
     
         </div>
