--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="hospital%20website/css/style.css">
 
 </head>
 <body>
@@ -49,7 +49,7 @@
 <section class="home" id="home">
 
     <div class="image">
-        <img src="image/hands%20together.gif" alt="">
+        <img src="hospital%20website/image/hands%20together.gif" alt="">
     </div>
 
     <div class="content">
@@ -75,7 +75,7 @@
     <div class="row">
 
         <div class="image">
-            <img src="image/about%20us%20design.png" alt="">
+            <img src="hospital%20website/image/about%20us%20design.png" alt="">
         </div>
 
         <div class="content">
@@ -135,7 +135,7 @@
             <p>RNs and LVNs provide vital care at home, from giving medications and monitoring health to managing conditions
                 and guiding patients and their families. Our compassionate support ensures patients feel cared for and safe
                 in a familiar setting.</p>
-            <a href="eye.html" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
+            <a href="hospital%20website/eye.html" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
         </div>
 
         <div class="box">
@@ -143,7 +143,7 @@
             <h3>Physical Therapy</h3>
             <p>Our physical therapists provide essential home care, helping patients regain movement and manage pain. Through
                 personalized treatment plans, we use exercises and techniques to improve mobility and enhance quality of life.</p>
-            <a href="dental.html" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
+            <a href="hospital%20website/dental.html" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
         </div>
 
 
@@ -153,14 +153,14 @@
             <p>Our medical social workers play a key role in home health care, helping patients and families navigate emotional,
                 social, and financial challenges. They connect them with resources, guide them through healthcare systems,
                 and support overall well-being.</p>
-            <a href="blood.html" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
+            <a href="hospital%20website/blood.html" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
         </div>
 
         <div class="box">
             <i class="fas fa-hand-holding-medical"></i>
             <h3>Home Health Aides</h3>
             <p>Our Home Health Aides (HHAs) assist with personal care and daily tasks like bathing, dressing, meal prep, and light housekeeping. We provide compassionate support, ensuring comfort and a high quality of life for patients at home.</p>
-            <a href="nutritionist.html" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
+            <a href="hospital%20website/nutritionist.html" class="btn"> learn more <span class="fas fa-chevron-right"></span> </a>
         </div>
 
     </div>
@@ -302,7 +302,7 @@ End of comment-->
     <div class="row">
 
         <div class="image">
-            <img src="image/calender%20design.png" alt="">
+            <img src="hospital%20website/image/calender%20design.png" alt="">
         </div>
 
         <form action="https://formspree.io/f/xgvepjld" method="POST">
@@ -740,7 +740,7 @@ End of comment-->
 
 
 <!-- custom js file link  -->
-<script src="js/script.js"></script>
+<script src="hospital%20website/js/script.js"></script>
 
 </body>
 </html>
