--- a/hospital website/eye.html
+++ b/hospital website/eye.html
@@ -57,7 +57,7 @@
                 <p>Skilled nursing ensures expert care, better outcomes, and independence in the comfort of home.</p>
 
 
-                <a href="index.html" class="btn"> Go to Home Page <span class="fas fa-chevron-right"></span> </a>
+                <a href="../index.html" class="btn"> Go to Home Page <span class="fas fa-chevron-right"></span> </a>
         </div>
     
         </div>
