--- a/hospital website/heart.html
+++ b/hospital website/heart.html
@@ -67,7 +67,7 @@
                 Physical inactivity
                 Excessive alcohol use
                 </p>
-                <a href="index.html" class="btn"> Go to Home Page <span class="fas fa-chevron-right"></span> </a>
+                <a href="../index.html" class="btn"> Go to Home Page <span class="fas fa-chevron-right"></span> </a>
             </div>
     
         </div>
