Hiding url path

--- a/hospital website/blood.html
+++ b/hospital website/blood.html
@@ -105,6 +105,9 @@
     </section>
     
      doctors section ends -->
+   <script>
+       history.pushState({}, '', '/'); // Updates the URL to "/"
 
+   </script>
 </body>
 </html>
