--- a/hospital website/dental.html
+++ b/hospital website/dental.html
@@ -104,6 +104,9 @@
     </section>
     
      doctors section ends -->
+<script>
+    history.pushState({}, '', '/'); // Updates the URL to "/"
 
+</script>
 </body>
-</html>s
+</html>
