--- a/hospital website/eye.html
+++ b/hospital website/eye.html
@@ -103,6 +103,10 @@
     </section>
     
      doctors section ends -->
+   <script>
+       history.pushState({}, '', '/'); // Updates the URL to "/"
+
+   </script>
 
 </body>
 </html>
