--- a/hospital website/nutritionist.html
+++ b/hospital website/nutritionist.html
@@ -105,6 +105,10 @@
     </section>
     
      doctors section ends -->
+   <script>
+       history.pushState({}, '', '/'); // Updates the URL to "/"
+
+   </script>
 
 </body>
 </html>
